--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # This env file should be checked into source control
 # This is the place for default values for all environments
 # Values in `.env.local` and `.env.production` will override these values
+DATABASE_URL=postgresql://postgres:passw0rd@127.0.0.1/postgres
