--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "build": "blitz build",
     "start": "blitz start",
     "studio": "blitz prisma studio",
+    "db:create": "docker-compose run -p 5432:5432 -d postgres && sleep 5",
+    "db:migrate": "blitz prisma migrate deploy --preview-feature",
+    "db:migrate:dev": "blitz prisma migrate dev --preview-feature",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "prisma": {
     "schema": "db/schema.prisma"
@@ -24,30 +29,41 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/react": "1.8.6",
-    "@emotion/react": "11.8.1",
-    "@emotion/styled": "11.8.1",
-    "@prisma/client": "3.10.0",
-    "blitz": "0.45.3",
-    "final-form": "4.20.6",
-    "framer-motion": "5.6.0",
-    "react": "18.0.0-beta-149b420f6-20211119",
-    "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
-    "react-final-form": "6.5.8",
-    "zod": "3.12.0"
+    "@chakra-ui/react": "2.2.1",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@prisma/client": "3.15.2",
+    "blitz": "0.45.4",
+    "final-form": "4.20.7",
+    "framer-motion": "6.3.15",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-final-form": "6.5.9",
+    "zod": "3.17.3"
   },
   "devDependencies": {
+    "@babel/core": "7.18.5",
+    "@storybook/addon-actions": "6.5.9",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-interactions": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/manager-webpack5": "6.5.9",
+    "@storybook/react": "6.5.9",
+    "@storybook/testing-library": "0.0.13",
     "@types/preview-email": "2.0.1",
-    "@types/react": "17.0.39",
-    "eslint": "7.32.0",
-    "husky": "7.0.4",
-    "lint-staged": "11.3.0-beta.2",
-    "prettier": "2.5.1",
-    "prettier-plugin-prisma": "3.10.0",
+    "@types/react": "18.0.0",
+    "babel-loader": "8.2.5",
+    "eslint": "8.18.0",
+    "eslint-plugin-storybook": "0.5.13",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
+    "prettier": "2.7.1",
+    "prettier-plugin-prisma": "3.14.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "3.10.0",
-    "typescript": "~4.5"
+    "prisma": "3.15.2",
+    "typescript": "~4.7.4"
   },
   "private": true
 }
