--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "db:create": "docker-compose run -p 5432:5432 -d postgres && sleep 5",
+    "db:seed": "blitz db seed",
+    "db:reset": "blitz db reset",
     "db:migrate": "blitz prisma migrate deploy --preview-feature",
     "db:migrate:dev": "blitz prisma migrate dev --preview-feature",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
