--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@chakra-ui/react": "2.2.1",
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
-    "@prisma/client": "3.15.2",
-    "blitz": "0.45.4",
+    "@prisma/client": "3.16.0-integration-tmp-revert-node14.1",
+    "blitz": "0.45.5",
     "decimal.js": "10.3.1",
     "final-form": "4.20.7",
     "framer-motion": "6.3.15",
@@ -65,8 +65,8 @@
     "prettier-plugin-prisma": "3.14.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "3.15.2",
-    "typescript": "~4.7.4"
+    "prisma": "3.16.0-integration-tmp-revert-node14.1",
+    "typescript": "~4.5"
   },
   "private": true
 }
