--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
     "@storybook/manager-webpack5": "6.5.9",
     "@storybook/react": "6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@swc/cli": "0.1.57",
+    "@swc/core": "1.2.229",
+    "@swc/helpers": "0.4.6",
+    "@swc/jest": "0.2.22",
     "@types/preview-email": "2.0.1",
     "@types/react": "18.0.0",
     "babel-loader": "8.2.5",
