--- a/.swcrc
+++ b/.swcrc
@@ -22,12 +22,5 @@
     "noInterop": false
   },
   "sourceMaps": true,
-  "exclude": [
-    "jest.config.ts",
-    ".*.spec.tsx?$",
-    ".*.test.tsx?$",
-    "./src/jest-setup.ts$",
-    "./**/jest-setup.ts$",
-    ".*.js$"
-  ]
+  "exclude": []
 }
