--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "decimal.js": "10.3.1",
     "final-form": "4.20.7",
     "framer-motion": "6.3.15",
+    "next-fonts": "1.5.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "6.5.9",
